@@ -51,3 +51,8 @@ ADD_TEST(listdir
          ${CMAKE_CURRENT_SOURCE_DIR}/listdir.sh
          ${CMAKE_BINARY_DIR}/kdumptool/testlistdir
          ${CMAKE_CURRENT_SOURCE_DIR}/data)
+
+ADD_TEST(delete_dumps
+         ${CMAKE_CURRENT_SOURCE_DIR}/delete_dumps.sh
+         ${CMAKE_BINARY_DIR}/kdumptool/kdumptool
+         ${CMAKE_CURRENT_SOURCE_DIR}/data)
