@@ -3,6 +3,7 @@
 TESTKDUMP=(	"2014-03-27-10:37"
 		"2013-12-31-23:59"
 		"2014-03-05-12:15"
+		"2014-01-12-09:22"
 )									   # }}}
 
 #
